[project]
name = "pico-doc-scraper"
version = "0.1.0"
description = "Web scraper for pico.css documentation"
readme = "README.md"
authors = [ { name = "matt" } ]
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.0",
    "responses>=0.18",
    "ruff>=0.9",
    "mypy>=1.0",
    "build>=0.10",
]
browser = [
    "playwright>=1.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py"]
markers = [
    "unit: Unit tests that run fast and don't hit external services",
    "integration: Integration tests that may involve HTTP requests or multiple components",
    "slow: Slow tests that may involve external services",
]

[tool.ruff]
line-length = 100
exclude = [
    "**/migrations/**",
    "**/__pycache__",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "D",   # pydocstyle (docstring checks)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pico_doc_scraper.*"
warn_unused_ignores = true
